--- a/views/pages/offline.pug
+++ b/views/pages/offline.pug
@@ -11,20 +11,21 @@ block pageInfo
     };
 
 block content
-  //- Intro layer
-  +layer({
-    class: "layout-padding-horz-default"
-  })
-    +layout({
-      class: "layout-contain-small layout-vert-centered-box"
+  section(id="content" itemtype="http://schema.org/WebPageElement" itemscope itemprop="mainEntity")
+    //- Intro layer
+    +layer({
+      class: "layout-padding-horz-default"
     })
-      section
-        +head
-          h1.h4.style-font-30--device-phone.style-primary-dark.style-bold.style-center Yikes you're offline!
-        +main({
-          class: "style-center",
-        })
-          +p("Psshhh, psshhh, you are cutting off, psshhh. You are currently offline. Reload the page or try again later.")
+      +layout({
+        class: "layout-contain-small layout-vert-centered-box"
+      })
+        section
+          +head
+            h1.h4.style-font-30--device-phone.style-primary-dark.style-bold.style-center Yikes you're offline!
+          +main({
+            class: "style-center",
+          })
+            +p("Psshhh, psshhh, you are cutting off, psshhh. You are currently offline. Reload the page or try again later.")
 
 block footer
   +footer({
