--- a/views/pages/about-me.pug
+++ b/views/pages/about-me.pug
@@ -16,8 +16,8 @@ block content
     title: "About me — The story of Joseph Ojo.",
     content: "What drove me to become a Mechatronics Engineer and why?",
     image: {
-      src: "cloudinary/white-flower",
-      alt: "An image of a white flower surrounded by green leaves from Unsplash."
+      src: "cloudinary/assorted-color-flowers",
+      alt: "An image of an assortment of flower of different colors, shapes and size; beautiful red, cream, white, and pink shades of flowers. By @pcristina18 on Unsplash."
     }
   })
 
