--- a/views/pages/my-projects.pug
+++ b/views/pages/my-projects.pug
@@ -17,8 +17,8 @@ block content
     content: "A potfolio of projects I have completed, and even some that are still on-going.",
     image: {
       class: "effect-parallax hero-img",
-      src: "cloudinary/blue-sky",
-      alt: "An image of a bright blue sky with small patches of clouds over two appartment high rises that are just barely in frame, from Unsplash by @ninovisalli."
+      src: "cloudinary/cloud-illustration",
+      alt: "An image of large clouds in a blue sky by Gong TY @deathclutch108 on Unsplash"
     }
   })
 
