--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -40,12 +40,13 @@
 $primary-light: #4e41ff;
 $primary: #2d22ca;
 $primary-dark: #271daf; // #774bec
-$secondary-light: #ff3164;
-$secondary: #ff1751;
-$secondary-dark: #ef1f53;
+$secondary-light: #ff4b78;
+$secondary: #ff3a6b;
+$secondary-dark: #e72c5b;
 $tertiary-light: #ffe851;
 $tertiary: #ffde03;
 $tertiary-dark: #e5c702;
+$off-blue: #d7d4ff;
 
 $background: #e2ebf5; // #202123
 $surface: #fff; //  #3b3c3e
@@ -120,6 +121,7 @@ $colors: (
     "tertiary": $tertiary,
     "tertiary-dark": $tertiary-dark,
 
+    "off-blue": $off-blue,        
     "background": $background,
     "surface": $surface,
     "transparent": transparent,
