--- a/src/scss/components/base.scss
+++ b/src/scss/components/base.scss
@@ -296,21 +296,20 @@ a.skip-main {
 .layer, .footer {
     a.focus-box {
         & {
-            padding: 3px;
+            border: 2px solid transparent;
+            border-radius: 3px;
+            padding: 3px 5px;
+            line-height: 1.5;
             // padding-left: 0;
 
             @media #{$screen-size-lt-tablet} {
-                padding: 5px;
+                padding: 5px 8px;
             }
         }
 
         &:focus {
-            border: solid 2px $secondary-light;
-            box-shadow: inset 0 0 0 2px #000;
-            padding-right: 5px;
-            border-radius: 6px;
-            padding-left: 5px;
-            line-height: 1.5;
+            border-color: $secondary;
+            border-color: var(--secondary, $secondary);
         }
     }
 }
