--- a/views/components/banner.pug
+++ b/views/components/banner.pug
@@ -14,7 +14,7 @@ mixin banner(value = {})
             .layer-header
               h1.style-font-title.layer-title.style-white.style-font-weight-bolder(itemprop="headline")!= title
             .layer-main
-              h2.style-font-family-bold.style-font-weight-300.style-white.layer-main-text(itemprop="description")!= content
+              h2.style-font-family-bold.style-font-weight-300.style-off-blue.layer-main-text(itemprop="description")!= content
             .layout-align-self-end
               button.layer-footer.action-btn.action-btn-hover.layer-shadow--1.layer-round.layer-secondary-btn.layer-hero-scroll-down(type="button" tabindex="0")
                 section.action-btn-layout.layout-padding-smallest
