--- a/views/app.pug
+++ b/views/app.pug
@@ -237,7 +237,7 @@ html(lang="en")
 
     .layer-action-center.layer-action-center-hide
       article.layer-action-group
-        .layer-shadow--1.layer-round.layout-align-self-end.layout-margin-horz-small
+        .layer-round.layout-align-self-end.layout-margin-horz-small
           button.back-to-top.action-btn.action-btn-hover.layer-round.layer-primary.layer-primary-light-hover.layer-primary-light-focus.style-white.style-hover-white.style-focus-white(type="button")
             section.action-btn-layout.layout-padding-smallest
               span.action-btn-group
