--- a/views/components/image.pug
+++ b/views/components/image.pug
@@ -13,7 +13,7 @@ mixin image(value = {})
     figure.load-img(itemprop="image" itemscope itemtype="https://schema.org/ImageObject")
       .img-contain
         picture.plchldr-pic
-          figcaption(aria-hidden="true")= alt
+          //- figcaption(aria-hidden="true")= alt
           img.placeholder-img(src!=`${urlParse(",w_50,q_100,e_blur:150")}.jpeg` sizes="100vw" width="100vw" alt=alt loading="lazy")
         picture.core-img-pic
           .webp(data-srcset!=`${urlParse(",w_600,q_100")}.webp`)
