Removed service worker again to improve perf.

--- a/views/app.pug
+++ b/views/app.pug
@@ -251,5 +251,5 @@ html(lang="en")
       +footer
 
     script(src="/js/vendor.min.js" ph-inline)
-    if !dev && !githubPages
+    //- if !dev && !githubPages
       script(src="/js/service.min.js" ph-inline)
