Made small but impactful changes

--- a/src/scss/components/base.scss
+++ b/src/scss/components/base.scss
@@ -253,7 +253,7 @@ a.skip-main {
     image-rendering: smooth;
     transform: scale(1.3);
     position: absolute;
-    filter: blur(5px);
+    // filter: blur(5px);
     left: 0;
     top: 0;
 }
