--- a/src/scss/components/layer.scss
+++ b/src/scss/components/layer.scss
@@ -259,7 +259,7 @@
     }
 
     &-secondary-btn {
-        transition: background-color .5s ease, color .5s ease;
+        transition: background-color .5s ease;
         @include applyTheme(background-color, "secondary-light");
 
         &:hover, &:focus {
@@ -267,8 +267,7 @@
         }
 
         &, &:hover, &:focus {
-            color: $white;
-            color: var(--black, $white);
+            color: $black;
         }
     }
 
@@ -391,11 +390,13 @@
 
         &-hide {
             pointer-events: none;
+            visibility: hidden;
             opacity: 0;
         }
 
         &-show {
             opacity: 1;
+            visibility: visible;
         }
     }
 
