--- a/src/scss/components/base.scss
+++ b/src/scss/components/base.scss
@@ -211,35 +211,34 @@ li, .li {
 
 a.skip-main {
     transition: background-color .5s ease, color .5s ease, border-color .35s ease;
+    border: 2px solid $secondary-light;
+    border-color: var(--secondary-light, $secondary-light);
+    // color: $secondary-light;
+    @include applyTheme(color, "secondary-light");
+    @include applyTheme(background-color, "dark");
+    transform: translate3d(-50%, 0, 0);
+    // background-color: $dark;
     position: absolute;
-    overflow: hidden;
-    z-index: -999;
-    left: -999px;
-    height: 1px;
-    width: 1px;
+    border-radius: 6px;
+    text-align: center;
+    font-weight: 600;
+    margin: 80px auto;
+    font-size: 1.2em;
+    overflow: auto;
+    height: auto;
+    padding: 5px;
+    z-index: 500;
+    width: 40%;
+    left: 50%;
     top: auto;
+
+    opacity: 0;
+    pointer-events: none;
 
     &:focus,
     &:active {
-        border: 2px solid $secondary-light;
-        border-color: var(--secondary-light, $secondary-light);
-        // color: $secondary-light;
-        @include applyTheme(color, "secondary-light");
-        @include applyTheme(background-color, "dark");
-        transform: translate3d(-50%, 0, 0);
-        // background-color: $dark;
-        border-radius: 6px;
-        text-align: center;
-        font-weight: 600;
-        margin: 80px auto;
-        font-size: 1.2em;
-        overflow: auto;
-        height: auto;
-        padding: 5px;
-        z-index: 1999;
-        width: 40%;
-        left: 50%;
-        top: auto;
+        opacity: 1;
+        pointer-events: auto;
     }
 }
 
