--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -42,7 +42,7 @@ $primary: #2d22ca;
 $primary-dark: #271daf; // #774bec
 $secondary-light: #ff4b78;
 $secondary: #ff3a6b;
-$secondary-dark: #e72c5b;
+$secondary-dark: #ce0c3c;
 $tertiary-light: #ffe851;
 $tertiary: #ffde03;
 $tertiary-dark: #e5c702;
@@ -121,7 +121,7 @@ $colors: (
     "tertiary": $tertiary,
     "tertiary-dark": $tertiary-dark,
 
-    "off-blue": $off-blue,        
+    "off-blue": $off-blue,
     "background": $background,
     "surface": $surface,
     "transparent": transparent,
