Re-added preload plugin

--- a/views/components/navbar.pug
+++ b/views/components/navbar.pug
@@ -15,7 +15,7 @@ mixin navbar(value = {})
           +link({
             href: "/",
             class: "navbar-title style-primary-dark-hover style-primary-dark-focus"
-          })(itemprop="url")
+          })(itemprop="url" data-swup-preload)
             img.navbar-logo(src="/favicon/favicon.svg" alt="Logo." itemprop="logo" loading="eager")
             span.navbar-title-line
             span.layout-inline-block(itemprop="name") JOSEPH!
