--- a/views/components/navbar.pug
+++ b/views/components/navbar.pug
@@ -35,5 +35,5 @@ mixin navbar(value = {})
                   href: `/${tab}`,
                   class: `navbar-link${i == focusIndex ? " navbar-link-focus" : ""}`
                 })(itemprop="url" tabindex="-1" data-swup-preload title=`${tab[0].toUpperCase() + tab.slice(1)} page link`)
-                  span.navbar-link-content(itemprop="name")= tab
+                  span.navbar-link-content(itemprop="name")= tab.replace("-", " ")
                   meta(itemprop="position" content="1")
