--- a/views/app.pug
+++ b/views/app.pug
@@ -78,7 +78,7 @@ html(lang="en")
               {
                 "@type": "ContactPoint",
                 "url": "#{defaults.websiteURL}",
-                "email": "mailto:laoluojo@gmail.com",
+                "email": "mailto:laoluojo&#64;gmail&#46;com",
                 "contactType": "customer service"
               }
             ]
@@ -109,7 +109,7 @@ html(lang="en")
               {
                 "@type": "ContactPoint",
                 "url": "#{defaults.websiteURL}",
-                "email": "mailto:laoluojo@gmail.com",
+                "email": "mailto:laoluojo&#64;gmail&#46;com",
                 "contactType": "customer service"
               }
             ]
@@ -168,7 +168,7 @@ html(lang="en")
     meta(name="web-author" content="Okiki Ojo")
     meta(name="robots" content="index, follow")
     meta(name="copyright" content="Joseph Ojo")
-    meta(name="contact" content="laoluojo@gmail.com")
+    meta(name="contact" content="laoluojo&#64;gmail&#46;com")
 
     meta(name="mobile-web-app-capable" content="yes")
     meta(name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0, user-scalable=yes")
