--- a/views/components/seo.pug
+++ b/views/components/seo.pug
@@ -9,12 +9,12 @@ mixin seo(value = {})
   meta(name='twitter:title' content=title)
   meta(name="apple-mobile-web-app-title", content=title)
 
-  meta(name="shortlink" content=`${websiteURL}${url}`)
+  link(rel="canonical" href=`${websiteURL}${url}`)
   meta(itemprop='url' content=`${websiteURL}${url}`)
-  meta(name="canonical" content=`${websiteURL}${url}`)
+  meta(name="shortlink" content=`${websiteURL}${url}`)
   meta(property='og:url' content=`${websiteURL}${url}`)
   meta(name='twitter:url' content=`${websiteURL}${url}`)
 
-  meta(name='description' content=description)
-  meta(itemprop='description' content=description)
+  meta(name='description' itemprop='description' content=description)
   meta(property='og:description' content=description)
+  meta(property='twitter:description' content=description)
