--- a/views/pages/about-me.pug
+++ b/views/pages/about-me.pug
@@ -7,13 +7,13 @@ block pageInfo
       url: "/about-me",
       name: "about-me",
       title: "About me — The story of Joseph Ojo.",
-      description: "What drove me to become a Mechatronics Engineer and why?"
+      description: "What drove me to become a Mechatronics Engineer and why? I explore my life story, as well as my passion for engineering."
     };
 
 block content
   //- Hero layer
   +hero({
-    title: "About me — The story of Joseph Ojo.",
+    title: "About me — The story of Joseph Ojo, the engineer who could.",
     content: "What drove me to become a Mechatronics Engineer and why?",
     image: {
       src: "cloudinary/assorted-color-flowers",
