--- a/views/pages/contact-me.pug
+++ b/views/pages/contact-me.pug
@@ -48,6 +48,6 @@ block content
                   })(target="_blank" rel="noreferrer noopener")
                 li(itemprop="email")
                   +link({
-                    href: "mailto:laoluojo@gmail.com",
+                    href: "mailto:laoluojo&#64;gmail&#46;com",
                     content: "Email"
                   })(target="_blank" rel="noreferrer noopener")
