--- a/views/pages/index.pug
+++ b/views/pages/index.pug
@@ -133,7 +133,7 @@ block content
               +link({
                 href: "/projects/google-designs",
                 class: "layout-block"
-              }, true)
+              }, true)(title="The link to the Google Design project page.")
                 +tile({
                   title: "Google Design",
                   class: "layer-box layer-surface layout-block layer-tile-outline",
@@ -155,7 +155,7 @@ block content
               +link({
                 href: "/projects/nasa",
                 class: "layout-block"
-              }, true)
+              }, true)(title="The link to the Nasa project page.")
                 +tile({
                   title: "Nasa",
                   class: "layer-box layer-surface layout-block layer-tile-outline",
