--- a/views/pages/projects/google-designs.pug
+++ b/views/pages/projects/google-designs.pug
@@ -13,7 +13,7 @@ block pageInfo
 block content
   //- Banner layer
   +banner({
-    title: "Google Designs — A project I did with Google.",
+    title: "Google Designs — A project I did with Google...",
     content: "I worked with the Google Designs team to... Lorem Ipsium dolor sit amet, tempor...",
     image: {
       class: "effect-parallax hero-img",
