--- a/views/pages/projects/nasa.pug
+++ b/views/pages/projects/nasa.pug
@@ -13,7 +13,7 @@ block pageInfo
 block content
   //- Banner layer
   +banner({
-    title: "Nasa — A project I did with Nasa.",
+    title: "Nasa — A project I did with Nasa...",
     content: "Nasa and I, Lorem Ipsium dolor sit amet, consectetur adipiscing elit, sed do eiusmod...",
     image: {
       class: "effect-parallax hero-img",
