--- a/views/pages/sitemap.pug
+++ b/views/pages/sitemap.pug
@@ -7,7 +7,7 @@ block pageInfo
       url: "/sitemap",
       name: "sitemap",
       title: "Sitemap — Lets find you a destination, the destination of greatness!",
-      description: "A little lost, here is a map, now where do you want to go?"
+      description: "A little lost, here is a map, now where do you want to go? The sitemap lists all pages and gives brief descriptions to help you find your way."
     };
 
 block content
