--- a/views/components/link.pug
+++ b/views/components/link.pug
@@ -1,8 +1,7 @@
 mixin link(value = {}, noFocus)
     - let { content, href } = value;
     - let _class = value.class || "layout-inline";
-    - let _html = self.githubPages ? ".html" : "";
-    - let _href = href === "/" ? `/index${_html}` : (href[0] === "/" ? `${href}${_html}` : href);
+    - let _href = href === "/" ? "/index.html" : (href[0] === "/" ? `${href}.html` : href);
 
     a(href=_href class=`${_class} ${noFocus ? "" : "focus-box"}` title=content)&attributes(attributes)= content
         block
