--- a/views/app.pug
+++ b/views/app.pug
@@ -31,8 +31,11 @@ html(lang="en")
       -
         let page = Object.assign({}, defaults);
 
-    link(rel="dns-prefetch" href='https://res.cloudinary.com/' crossorigin)
-    link(rel="preconnect" href='https://res.cloudinary.com/' crossorigin)
+    link(rel="dns-prefetch" href='https://res.cloudinary.com' crossorigin)
+    link(rel="preconnect" href='https://res.cloudinary.com' crossorigin)
+
+    link(rel="dns-prefetch" href='https://d33wubrfki0l68.cloudfront.net' crossorigin)
+    link(rel="preconnect" href='https://d33wubrfki0l68.cloudfront.net' crossorigin)
 
     link(rel="dns-prefetch" href=websiteURL crossorigin)
     link(rel="preconnect" href=websiteURL crossorigin)
