Trying out netlify build plugins

--- a/views/app.pug
+++ b/views/app.pug
@@ -45,7 +45,9 @@ html(lang="en")
     //- link(rel="preload" href="/fonts/montserrat--extrabold_latin.woff2" as="font" crossorigin)
     //- link(rel="preload" href="/fonts/montserrat--bold_latin.woff2" as="font" crossorigin)
     //- link(rel="preload" href="/fonts/frank-ruhl-libre--black_latin.woff2" as="font" crossorigin)
-    link(rel="stylesheet" href="/css/fonts.min.css" ph-inline)
+    //-  ph-inline
+    link(rel="stylesheet" href="./css/fonts.min.css")
+    link(rel="stylesheet" href="/css/app.min.css" ph-inline)
 
     meta(charset="utf-8")
     meta(http-equiv="x-ua-compatible" content="ie=edge")
@@ -217,8 +219,6 @@ html(lang="en")
     link(rel="apple-touch-icon", sizes="180x180", href="/favicon/apple-touch-icon.png")
     link(rel="icon", type="image/png", sizes="32x32", href="/favicon/favicon-32x32.png")
     link(rel="icon", type="image/png", sizes="16x16", href="/favicon/favicon-16x16.png")
-
-    link(rel="stylesheet" href="/css/app.min.css" ph-inline)
 
     //- <!--[if lt IE 9]>
     //- link(rel="preconnect" href="https://cdnjs.cloudflare.com/" crossorigin)
