--- a/views/app.pug
+++ b/views/app.pug
@@ -44,9 +44,9 @@ html(lang="en")
     //- link(rel="preload" href="/fonts/roboto--regular_latin.woff2" as="font" crossorigin)
     //- link(rel="preload" href="/fonts/montserrat--extrabold_latin.woff2" as="font" crossorigin)
     //- link(rel="preload" href="/fonts/montserrat--bold_latin.woff2" as="font" crossorigin)
-    //- link(rel="preload" href="/fonts/frank-ruhl-libre--black_latin.woff2" as="font" crossorigin)
-    //-  ph-inline
-    link(rel="stylesheet" href="./css/fonts.min.css")
+    link(rel="preload" href="/fonts/frank-ruhl-libre--black_latin.woff2" as="font" crossorigin)
+
+    link(rel="stylesheet" href="/css/fonts.min.css" ph-inline)
     link(rel="stylesheet" href="/css/app.min.css" ph-inline)
 
     meta(charset="utf-8")
