--- a/views/pages/contact-me.pug
+++ b/views/pages/contact-me.pug
@@ -10,6 +10,9 @@ block pageInfo
       description: "Do you have a project that requires passion and dedication, then let's talk. Let's create something extrodinary."
     };
 
+block preload
+  link(rel="preload" href="/fonts/montserrat--bold_latin.woff2" as="font" type="font/woff2" crossorigin)
+
 block content
   section(id="content" itemtype="http://schema.org/WebPageElement" itemscope itemprop="mainEntity")
     //- Intro layer
