--- a/views/pages/index.pug
+++ b/views/pages/index.pug
@@ -174,6 +174,6 @@ block content
           div.layout-block.style-center
             +link({
               href: "/my-projects",
-              class: "style-500 style-font-30 style-font-title layout-padding layout-padding-horz-large layout-margin-top-larger",
+              class: "style-font-weight-bold style-font-30 style-font-title layout-padding layout-padding-horz-large layout-margin-top-larger",
               content: "More..."
             })
