--- a/views/pages/offline.pug
+++ b/views/pages/offline.pug
@@ -10,6 +10,9 @@ block pageInfo
       description: "Psshhh, psshhh, you are cutting off, psshhh. You are currently offline. Reload the page or try again later."
     };
 
+block preload
+  link(rel="preload" href="/fonts/montserrat--bold_latin.woff2" as="font" type="font/woff2" crossorigin)
+
 block content
   section(id="content" itemtype="http://schema.org/WebPageElement" itemscope itemprop="mainEntity")
     //- Intro layer
