--- a/views/components/navbar.pug
+++ b/views/components/navbar.pug
@@ -16,9 +16,9 @@ mixin navbar(value = {})
             href: "/",
             class: "navbar-title style-primary-dark-hover style-primary-dark-focus"
           })(itemprop="url" data-swup-preload title="The Joseph Ojo Logo.")
-            img.navbar-logo(src="/favicon/favicon.svg" alt="Logo." itemprop="logo" ph-inline)
+            img.navbar-logo(src="/favicon/favicon.svg" alt="Logo." itemprop="logo")
             span.navbar-title-line
-            span.layout-inline-block(itemprop="name") JOSEPH!
+            span.name.layout-inline-block(itemprop="name") JOSEPH!
           .layout-spacer
           .navbar-foot.navbar-mobile
             .layout-inline-block
