--- a/views/components/navbar.pug
+++ b/views/components/navbar.pug
@@ -1,6 +1,13 @@
 include /components/link.pug
 include /components/image.pug
 
+mixin themeSwitcher()
+  .layout-inline-block
+    a.theme-switcher.navbar-btn.action-btn.layer-round.layout-padding-smaller.layer-transparent.layer-light-hover.layer-mid-dark-focus(title="Theme Switcher" name="Theme Switcher")
+      span.action-btn-group
+        //- brightness_medium
+        i.action-icon.style-font-family-bold.style-font-size-24(inline) theme switcher
+
 mixin navbar(value = {})
   - let { name } = value;
   - let _class = value.class;
@@ -21,6 +28,7 @@ mixin navbar(value = {})
             span.name.layout-inline-block(itemprop="name") JOSEPH!
           .layout-spacer
           .navbar-foot.navbar-mobile
+            +themeSwitcher
             .layout-inline-block
               a.navbar-menu.action-btn.layer-round.layout-padding-smaller.layer-transparent.layer-light-hover.layer-mid-dark-focus(title="Menu Button" name="Menu Button")
                 span.action-btn-group
@@ -37,3 +45,5 @@ mixin navbar(value = {})
                 })(itemprop="url" tabindex="-1" data-swup-preload title=`The ${tab[0].toUpperCase() + tab.slice(1).replace("-", " ")} navbar link.`)
                   span.navbar-link-content(itemprop="name")= tab.replace("-", " ")
                   meta(itemprop="position" content="1")
+            .navbar-desktop-display
+              +themeSwitcher
