--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -231,19 +231,19 @@ $sizes: (
 // :root,
 /*! purgecss start ignore */
 html[theme=dark] {
-    @media (prefers-color-scheme: dark) {
+    // @media (prefers-color-scheme: dark) {
         @each $name, $value in $dark-colors {
             --#{$name}: #{$value};
         }
-    }
+    // }
 }
 
 html[theme=light] {
-    @media (prefers-color-scheme: light) {
+    // @media (prefers-color-scheme: light) {
         @each $name, $value in $colors {
             --#{$name}: #{$value};
         }
-    }
+    // }
 }
 /*! purgecss end ignore */
 
