--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -238,13 +238,13 @@ html[theme=dark] {
     // }
 }
 
-html[theme=light] {
-    // @media (prefers-color-scheme: light) {
-        @each $name, $value in $colors {
-            --#{$name}: #{$value};
-        }
-    // }
-}
+// html[theme=light] {
+//     // @media (prefers-color-scheme: light) {
+//         @each $name, $value in $colors {
+//             --#{$name}: #{$value};
+//         }
+//     // }
+// }
 /*! purgecss end ignore */
 
 @mixin applyTheme($property: color, $value: "primary") {
