--- a/src/scss/components/layer.scss
+++ b/src/scss/components/layer.scss
@@ -400,10 +400,7 @@
 
     &-next {
         background-color: $white;
-
-        @media (prefers-color-scheme: dark) {
-            background-color: #292d33;
-        }
+        background-color: var(--surface, $white);
 
         .layer-title,
         .layer-content {
