--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -152,13 +152,13 @@ $dark-colors: (
     "tertiary-dark": $tertiary-dark,
 
     "background": #000000, // #252529
-    "surface": #212124, // #2c2d2e
+    "surface": #2f2f35, // #2c2d2e
     "transparent": transparent,
 
     "white": $white,
     "black": $black,
 
-    "very-light": #292d33,
+    "very-light": #181b1f,
     "light": #525252,
     "mid-light": $mid-light,
     "mid": $mid,
