--- a/src/scss/components/layer.scss
+++ b/src/scss/components/layer.scss
@@ -400,7 +400,7 @@
 
     &-next {
         background-color: $white;
-        background-color: var(--surface, $white);
+        background-color: var(--very-light, $white);
 
         .layer-title,
         .layer-content {
